feat: update api docs
JIRA: feature/FOXSOCIAL5-1945_update_restful_api_docs_1

--- a/backend/packages/company/note/composer.json
+++ b/backend/packages/company/note/composer.json
@@ -16,7 +16,7 @@
             "alias": "note",
             "namespace": "Company\\Note",
             "internalUrl": "/note",
-            "internalAdminUrl": "/admincp/setting/edit/note",
+            "internalAdminUrl": "/admincp/note/setting",
             "providers": [
                 "Company\\Note\\Providers\\PackageServiceProvider"
             ],
